2007-01-23  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Reduced saving: the salut, lart, and quotes plugin now only save
	their datafiles if anything changed since last time. This speeds up
	operations such as saving and rescanning; it also allow hand-editing
	of the data files while the bot is running, since a rescan will load
	the changed data files without overwriting them with a useless save
	before. Of course this only works if there are no pending changes in
	the running bot.

2007-01-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Server timeout: rework the server timeout code. Instead of PINGing
	the server unconditionally every server.ping_timeout seconds, we only
	PING it if we don't receive anything in the user-chosen timeout (lazy
	PING). The code rewrite also seems to have fixed the "bot stalling
	doing nothing" problem, which seemed to have been a consequence of
	@socket.select not having a timeout.

2006-11-01  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* SSL support: patch from Robin H. Johnson <robbat2@gentoo.org>

2006-10-28  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* A-Z game: try to guess the word the bot is thinking of: every miss
	helps by reducing the range of allowed words, until it's so small
	around the correct one that you can't miss it.

2006-10-27  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Flood protection: first attempt at penalty-based flood protection.
	This should make rbot much less prone to Excess Floods *and* still
	serve normally without excessive delays.

2006-10-25  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* HttpUtil: Strings returned by get_cached now have a cached? method
	which returns true or false depending on whether the result was taken
	from the cache or not; this can be exploited by plugins that parse the
	result in some particular way, since they can now skip the parsing
	stage if they cache the parse result.

2006-10-24  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
